updating year long program

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "bunx rork start -p tszs6py961gtxoaf32wc8 --tunnel",
-    "start-web": "bunx rork start -p tszs6py961gtxoaf32wc8 --web --tunnel",
-    "start-web-dev": "DEBUG=expo* bunx rork start -p tszs6py961gtxoaf32wc8 --web --tunnel",
+    "start-web": "bunx start -p tszs6py961gtxoaf32wc8 --web --tunnel",
+    "start-web-dev": "DEBUG=expo* bunx start -p tszs6py961gtxoaf32wc8 --web --tunnel",
     "lint": "expo lint"
   },
   "dependencies": {
